# tracypy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/: _core.c
src/tracypy/: __init__.py  __main__.py  _core.pyi
tests/: test_cli.py  test_e2e.py  test_profiler.py  test_smoke.py
